commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 12/04/2018
 uid: migration/20_21
-ms.openlocfilehash: f6d0dd9afe4519149bffed148db967dd4b86e8d7
-ms.sourcegitcommit: 9bb58d7c8dad4bbd03419bcc183d027667fefa20
+ms.openlocfilehash: f69a254703e096c0a3b2c90c00aa5fac8423cdea
+ms.sourcegitcommit: 6ba5fb1fd0b7f9a6a79085b0ef56206e462094b7
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52862146"
+ms.lasthandoff: 02/14/2019
+ms.locfileid: "56248327"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
@@ -44,7 +44,7 @@ Mettre à jour le fichier projet :
 * Supprimer les références à **&lt;DotNetCliToolReference&gt;** éléments pour les packages suivants. Ces outils sont regroupés par défaut dans l’interface CLI .NET Core et n’avez pas besoin d’installer séparément.
   * Microsoft.DotNet.Watcher.Tools (`dotnet watch`)
   * Microsoft.EntityFrameworkCore.Tools.DotNet (`dotnet ef`)
-  * Microsoft.Extensions.Caching.SqlConfig.Tools (`dotnet sql-cache`)
+  * Microsoft.Extensions.Caching.SqlConfig.Tools  (`dotnet sql-cache`)
   * Microsoft.Extensions.SecretManager.Tools (`dotnet user-secrets`)
 * Facultatif : vous pouvez supprimer le **&lt;DotNetCliToolReference&gt;** élément pour `Microsoft.VisualStudio.Web.CodeGeneration.Tools`. Vous pouvez remplacer cet outil avec une version installée dans le monde entier en exécutant `dotnet tool install -g dotnet-aspnet-codegenerator`.
 * Pour 2.1, une [bibliothèque de classes Razor](xref:razor-pages/ui-class) est la solution recommandée pour distribuer les fichiers Razor. Si votre application utilise des vues incorporés, ou sinon repose sur la compilation pour le runtime de fichiers Razor, ajoutez `<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>` à un `<PropertyGroup>` dans votre fichier projet.
@@ -85,7 +85,7 @@ Dans ASP.NET Core 2.1, les images Docker migré vers le [du référentiel GitHub
 |2.0      |2.1      |
 |---------|---------|
 |Microsoft / aspnetcore:2.0        |microsoft/dotnet:2.1-aspnetcore-runtime |
-|Microsoft/aspnetcore-build : 2.0  |Microsoft / dotnet:2.1-sdk |
+|microsoft/aspnetcore-build:2.0  |microsoft/dotnet:2.1-sdk |
 
 Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les balises et nouveaux noms d’image dans la colonne 2.1 de la table précédente. Pour plus d’informations, consultez [migration à partir de référentiels de docker aspnetcore à dotnet](https://github.com/aspnet/Announcements/issues/298).
 
@@ -142,7 +142,7 @@ Identité 2.1 expose des points de terminaison avec le `Identity` zone. Par exem
 | --------------- | ------------ |
 | / / Connexion au compte  | / Identity/Account/Login |
 | / Compte/déconnexion | Identité/compte/déconnecter |
-| / Compte/gérer | / Identité/compte/gérer |
+| / Compte/gérer | /Identity/Account/Manage |
 
 Les applications qui ont du code à l’aide d’identité et 2.0 de remplacer l’interface utilisateur de l’identité et la nécessité de bibliothèque d’identités 2.1 à prendre en compte les URL d’identité ont `/Identity` segment devant les URI. Pour gérer les nouveaux points de terminaison identité consiste à configurer redirections, par exemple, à partir de `/Account/Login` à `/Identity/Account/Login`.
 
@@ -172,7 +172,7 @@ Cette section décrit les étapes pour remplacer le code d’identité généré
 ### <a name="update-after-scaffolding-identity"></a>Mettre à jour après la génération de modèles automatique identité
 
 * Supprimer la génération de modèles automatique identité générée `IdentityDbContext` classe dérivée de la *zones/Identity/Data/* dossier.
-* Supprimer *Areas/Identity/IdentityHostingStartup.cs*
+* Delete *Areas/Identity/IdentityHostingStartup.cs*
 * Mise à jour le  *\_LoginPartial.cshtml* fichier :
   * Déplacer *Pages /\_LoginPartial.cshtml* à *Pages/Shared/\_LoginPartial.cshtml*
   * Ajouter `asp-area="Identity"` aux liens d’ancrage et du formulaire.
@@ -245,6 +245,21 @@ Le JSON suivant illustre le nouveau 2.1 modèle généré *launchSettings.json* 
 [!code-json[](20_21/sample/launchSettings21.json)]
 
 Pour plus d'informations, consultez <xref:security/enforcing-ssl>.
+
+## <a name="breaking-changes"></a>Modifications avec rupture
+
+### <a name="fileresult-range-header"></a>En-tête de plage de FileResult
+
+<xref:Microsoft.AspNetCore.Mvc.FileResult> ne peut plus traiter les [Accept-Ranges](https://developer.mozilla.org/docs/Web/HTTP/Headers/Accept-Ranges) en-tête par défaut. Pour activer la `Accept-Ranges` en-tête, la valeur <xref:Microsoft.AspNetCore.Mvc.FileResult.EnableRangeProcessing> à `true`.
+
+### <a name="controllerbasefile-and-physicalfile-range-header"></a>En-tête ControllerBase.File et PhysicalFile plage
+
+Ce qui suit <xref:Microsoft.AspNetCore.Mvc.ControllerBase> méthodes ne peut plus traiter les [Accept-Ranges](https://developer.mozilla.org/docs/Web/HTTP/Headers/Accept-Ranges) en-tête par défaut :
+
+* Les surcharges de [ControllerBase.File](/dotnet/api/microsoft.aspnetcore.mvc.controllerbase.file#Microsoft_AspNetCore_Mvc_ControllerBase_File_System_String_System_String_System_String_System_Boolean_)
+* [ControllerBase.PhysicalFile](xref:Microsoft.AspNetCore.Mvc.ControllerBase.PhysicalFile*)
+
+Pour activer la `Accept-Ranges` en-tête, définissez le `EnableRangeProcessing` paramètre `true`.
 
 ## <a name="additional-changes"></a>Modifications supplémentaires
 
