commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 01/12/2019
+ms.date: 02/21/2019
 uid: migration/21-to-22
-ms.openlocfilehash: 53fc67a249d8a59c1a15d89ded895356221b4b8f
-ms.sourcegitcommit: 5e3797a02ff3c48bb8cb9ad4320bfd169ebe8aba
+ms.openlocfilehash: ca417110d984fd6ba49787ada576625514940a21
+ms.sourcegitcommit: 0945078a09c372f17e9b003758ed87e99c2449f4
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/12/2019
-ms.locfileid: "56154261"
+ms.lasthandoff: 02/21/2019
+ms.locfileid: "56647900"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -23,7 +23,7 @@ Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 exist
 
 ## <a name="update-target-framework-moniker-tfm"></a>Mettre à jour le Moniker du Framework cible
 
-Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2. Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:
+Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2. Dans le fichier projet, mettez à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -43,13 +43,13 @@ Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundame
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-Le modèle d’hébergement in-process n’est pas pris en charge pour les applications ASP.NET Core qui ciblent le .NET Framework.
+Le modèle d’hébergement intra-processus n’est pas pris en charge pour les applications ASP.NET Core ciblant .NET Framework.
 
 Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.
 
 ## <a name="update-package-references"></a>Mettre à jour les références de package
 
-Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage. Inclusion d’un `Version` attribut entraîne l’avertissement suivant :
+Si vous ciblez .NET Core, supprimez la référence métapackage `Version` attribut dans le fichier projet. Inclusion d’un `Version` attribut entraîne l’avertissement suivant :
 
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
@@ -172,7 +172,7 @@ De Visual Studio **la génération automatique de demande de navigateur** expér
 
 ## <a name="update-logging-code"></a>Mettre à jour le code de journalisation
 
-Code de configuration de journalisation recommandée n’a pas changé depuis 2.1 vers 2.2, mais certains modèles de codage 1.x fonctionnaient encore 2.1 n’est plus fonctionnent dans 2.2.
+Code de configuration de journalisation recommandée n’a pas changé 2.1 vers 2.2, mais certains modèles de codage 1.x fonctionnaient encore 2.1 n’est plus dans 2.2.
 
 Si votre application effectue l’initialisation de fournisseur de journalisation, le filtrage et la configuration du chargement dans le `Startup` class, déplacer ce code à `Program.Main`:
 
