commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 02/21/2019
+ms.date: 03/02/2019
 uid: migration/21-to-22
-ms.openlocfilehash: ca417110d984fd6ba49787ada576625514940a21
-ms.sourcegitcommit: 0945078a09c372f17e9b003758ed87e99c2449f4
+ms.openlocfilehash: 0f585e1bf81d5f0d8b12c005e1b23bda5440380e
+ms.sourcegitcommit: 036d4b03fd86ca5bb378198e29ecf2704257f7b2
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/21/2019
-ms.locfileid: "56647900"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57346331"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -46,6 +46,15 @@ Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundame
 Le modèle d’hébergement intra-processus n’est pas pris en charge pour les applications ASP.NET Core ciblant .NET Framework.
 
 Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.
+
+## <a name="update-a-custom-webconfig-file"></a>Mettre à jour un fichier web.config personnalisée
+
+Pour les projets qui utilisent un personnalisé *web.config* fichier dans la racine du projet pour générer leurs publié *web.config* fichier :
+
+* Dans le `<handlers>` entrée qui ajoute le Module ASP.NET Core (`name="aspNetCore"`), modifiez le `modules` valeur à partir de l’attribut `AspNetCoreModule` à `AspNetCoreModuleV2`.
+* Dans le `<aspNetCore>` élément, ajoutez l’attribut de modèle hébergement (`hostingModel="InProcess"`).
+
+Pour plus d’informations et exemple *web.config* de fichiers, consultez <xref:host-and-deploy/aspnet-core-module#configuration-with-webconfig>.
 
 ## <a name="update-package-references"></a>Mettre à jour les références de package
 
@@ -99,7 +108,7 @@ Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json
 
 Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*). Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :
 
-[!code-json[](21-to-22/samples/launch.json?highlight=10)]
+[!code-json[](21-to-22/samples/launch.json?highlight=9)]
 
 ## <a name="update-kestrel-configuration"></a>Mettre à jour de configuration de Kestrel
 
