--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: tdykstra
 description: Découvrez comment migrer un projet ASP.NET Core 2.2 vers ASP.NET Core 3.0.
 ms.author: tdykstra
 ms.custom: mvc
-ms.date: 01/04/2019
+ms.date: 03/02/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 0b9f03ee4178e62c75decc5fe2f39a302334341f
-ms.sourcegitcommit: 3c2ba9a0d833d2a096d9d800ba67a1a7f9491af0
+ms.openlocfilehash: 7ebb02e1a9b37a532bda80d6ed8f10d373cc204b
+ms.sourcegitcommit: 036d4b03fd86ca5bb378198e29ecf2704257f7b2
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/07/2019
-ms.locfileid: "55854326"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57345731"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30-preview-2"></a>Migrer d’ASP.NET Core 2.2 à 3.0 Preview 2
 
@@ -35,11 +35,13 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant 
 
   S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0. Nombre d'entre eux font partie de `Microsoft.AspNetCore.App` et ne doivent pas être référencés individuellement plus. Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).
 
-* Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0. Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)
+* Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0. Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755).
 
   Par exemple, `Microsoft.EntityFrameworkCore` et `System.Data.SqlClient` font partie n’est plus de `Microsoft.AspNetCore.App`. La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été déjà finalisées et changera avant la version RTM 3.0.
 
-* Ajouter [prise en charge de Json.NET](#json)
+* Ajouter [prise en charge de Json.NET](#json).
+
+* Projets par défaut pour le [modèle d’hébergement intra-processus](xref:host-and-deploy/aspnet-core-module#in-process-hosting-model) dans ASP.NET Core 3.0 ou version ultérieure. Vous pouvez éventuellement supprimer le `<AspNetCoreHostingModel>` élément si sa valeur est `InProcess`.
 
 <a name="json"></a>
 
@@ -78,9 +80,7 @@ Le code suivant montre la 2.2 Core ASP.NET modèle généré `Program` classe :
 
 <xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> reste dans 3.0 et est le type de la `webBuilder` vu dans l’exemple de code précédent. <xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> sera déconseillée dans une version ultérieure et remplacé par `HostBuilder`.
 
-## <a name="moving-from-webhostbuilder-to-hostbuilder"></a>Passage de WebHostBuilder à HostBuilder
-
-La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration> et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur du démarrage. Le `HostBuilder` les contraintes de l’injection de dépendances :
+La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration> et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans `Startup`du constructeur. Le `HostBuilder` les contraintes de l’injection de dépendances :
 
 * Activer le conteneur d’injection de dépendance à générer qu’une seule fois.
 * Permet d’éviter les problèmes de durée de vie objet résultant comme la résolution de plusieurs instances de singletons.
@@ -116,3 +116,7 @@ Si vous appelez `AddJsonProtocol`, remplacez-la par `AddNewtonsoftJsonProtocol`.
       .AddNewtonsoftJsonProtocol(...) // 3.0
       .Build()
   ```
+  
+## <a name="opt-in-to-runtime-compilation"></a>S’abonner à la compilation pour le runtime
+  
+Dans 3.0, la compilation pour le runtime est un scénario opt-in. Pour activer la compilation pour le runtime, consultez <xref:mvc/views/view-compilation#runtime-compilation>.
